--- a/settings.gradle
+++ b/settings.gradle
@@ -149,6 +149,7 @@ include ":kotlin-build-common",
         ":ultimate:ultimate-runner",
         ":kotlin-annotations-jvm",
         ":kotlin-annotations-android",
+        ":kotlin-scripting-common",
 
         // plugin markers:
         ':kotlin-gradle-plugin:plugin-marker',
@@ -230,6 +231,7 @@ project(':examples:kotlin-jsr223-local-example').projectDir = "$rootDir/librarie
 project(':examples:kotlin-jsr223-daemon-local-eval-example').projectDir = "$rootDir/libraries/examples/kotlin-jsr223-daemon-local-eval-example" as File
 project(':kotlin-annotations-jvm').projectDir = "$rootDir/libraries/tools/kotlin-annotations-jvm" as File
 project(':kotlin-annotations-android').projectDir = "$rootDir/libraries/tools/kotlin-annotations-android" as File
+project(':kotlin-scripting-common').projectDir = "$rootDir/libraries/scripting/common" as File
 
 // plugin markers:
 project(':kotlin-gradle-plugin:plugin-marker').projectDir = file("$rootDir/libraries/tools/kotlin-gradle-plugin/plugin-marker")
